# ChemEng-Toolkit

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_zh.md  pyproject.toml  requirements.txt
chemeng_toolkit/: __init__.py
chemeng_toolkit/thermal_analysis/: __init__.py  ftir_processor.py  kinetics.py  tga_processor.py
chemeng_toolkit/utils/: __init__.py  plot_helpers.py
data/ftir_sample/: MBL-10-20K.CSV  MBL-20-100K.CSV  MBL-5-10K.CSV  gt_100k.CSV
examples/: ftir_example.ipynb  generate_figures.py  tga_example.ipynb
