[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chemeng-toolkit"
version = "0.1.0"
description = "Python toolkit for chemical engineering data analysis — TGA/DSC, FT-IR, distillation design, and kinetics"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Lin Haokang", email = "khusdasz@gmail.com"},
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "scipy>=1.10",
    "xlrd>=2.0",
    "openpyxl>=3.1",
]

[project.urls]
Source = "https://github.com/khusdasz/ChemEng-Toolkit"

[tool.setuptools.packages.find]
include = ["chemeng_toolkit*"]
